--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -36,6 +36,14 @@ body {
 .question-tag{
     margin-right: 5px;
 }
+.publish-tag-tab{
+    display: none;
+    margin-top: 10px;
+    padding-top:10px;
+}
+.publish-tag-tab .label-info{
+    margin-right: 10px;
+}
 
 .question-related{
     line-height: 20px;
