--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -7,6 +7,7 @@
     <script src="/js/jquery-1.8.3.js"></script>
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/community.js"></script>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/community.css">
@@ -23,6 +24,7 @@
                 <div class="form-group">
                     <label for="title">タイトル(概要)：</label>
                     <input type="text" id="title" name="title" class="form-control" placeholder="質問タイトル"
+                           autocomplete="off"
                            th:value="${title}">
                 </div>
                 <div class="form-group">
@@ -33,10 +35,30 @@
                 <div class="form-group">
                     <label for="tag">タグ：</label>
                     <input type="text" id="tag" name="tag" class="form-control" placeholder="タグを入力してください。"
-                           th:value="${tag}">
+                           autocomplete="off"
+                           th:value="${tag}"
+                           onclick="showSelectTag()"
+                    >
+                    <div id="select-tag" class="publish-tag-tab">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation"  th:each="selectCategory:${tags}">
+                                <a th:href="${'#'+  selectCategory.categoryName}" aria-controls="home" role="tab"
+                                   data-toggle="tab" th:text="${selectCategory.categoryName}"></a>
+                            </li>
+                        </ul>
+                        <div class="tab-content" onclick="hideSelectTag()">
+                            <div role="tabpanel" class="tab-pane" th:id="${selectCategory.categoryName}"
+                                 th:each="selectCategory: ${tags}">
+                                <span class="label label-info " th:each="tag:${selectCategory.tags}">
+                                    <span class="glyphicon glyphicon-tags" onclick="selectTag(this)"
+                                          th:data-tag="${tag}">[[${tag}]]</span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div th:if="${error}!=null">
-                    <span class="alert alert-danger" role="alert" th:text="${error}"></span>
+                    <span id="error" class="alert alert-danger" role="alert" th:text="${error}"></span>
                 </div>
                 <button type="submit" class="btn btn-success btn-publish">コミット</button>
             </form>
@@ -49,5 +71,6 @@
         </div>
     </div>
 </div>
+</script>
 </body>
 </html>
