--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -40,9 +40,12 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " th:if="${section}=='replies'">
                 <div class="media" th:each="notification:${pagination.data}">
                     <div class="media-body">
-                        <h4 class="media-heading">
-                            <a th:href="@{/notification/{id}(id=${notification.id})}" th:text="${notification.notifierName +' '+notification.type +' '+notification.outerTitle }"></a>
-                        </h4>
+                        <p class="media-heading">
+                            <span th:text="${notification.notifierName +'さんは '}"></span>
+                            <a th:href="@{/notification/{id}(id=${notification.id})}"
+                               th:text="${notification.outerTitle}"></a>
+                            <span th:text="${' '+notification.type +' '}"></span>
+                        </p>
                     </div>
                 </div>
             </div>
