--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -85,9 +85,7 @@
             delay:0,
             watch:false,
             placeholder:"質問を入力してください。",
-            imageUpload    : true,
-            imageFormats   : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
-            imageUploadURL : "/file/upload",
+            imageUpload:false
         });
     });
 </script>
