--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -92,12 +92,13 @@
                         <div class="media">
                             <div class="media-left">
                                 <a href="#">
-                                    <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
+                                    <img class="media-object img-rounded"
+                                         th:src="${session.user!= null ? session.user.avatarUrl : '/images/default-avatar.png'}">
                                 </a>
                             </div>
                             <div class="media-body">
                                 <h6 class="media-heading">
-                                    <span th:text="${question.user.name}"></span><br>
+                                    <span th:text="${session.user!= null ? session.user.name : '未登録'}"></span><br>
                                 </h6>
                             </div>
                         </div>
