--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,12 +34,12 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${questionList.showFirstPage}">
-                        <a th:href="@{/(pageNo=1)}" aria-label="Previous">
+                        <a th:href="@{/(pageNo=1,search=${search})}" aria-label="Previous">
                             <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
                     <li th:if="${questionList.showPrevious}">
-                        <a th:href="@{/(pageNo=${questionList.pageNo - 1})}"
+                        <a th:href="@{/(pageNo=${questionList.pageNo - 1},search=${search})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                         </a>
@@ -47,17 +47,17 @@
 
                     <li th:each="pageNo : ${questionList.pages}"
                         th:class="${questionList.pageNo == pageNo}? 'active' : ''">
-                        <a th:href="@{/(pageNo=${pageNo})}" th:text="${pageNo}"></a>
+                        <a th:href="@{/(pageNo=${pageNo},search=${search})}" th:text="${pageNo}"></a>
                     </li>
 
                     <li th:if="${questionList.showNext}">
-                        <a th:href="@{/(pageNo=${questionList.pageNo +1})}"
+                        <a th:href="@{/(pageNo=${questionList.pageNo +1},search=${search})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
                     <li th:if="${questionList.showEndPage}">
-                        <a th:href="@{/(pageNo=${questionList.totalPage})}"
+                        <a th:href="@{/(pageNo=${questionList.totalPage},search=${search})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&gt;&gt;</span>
                         </a>
