--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -18,9 +18,9 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <form class="navbar-form navbar-left">
+                <form class="navbar-form navbar-left" action="/" method="get">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="質問">
+                        <input type="text" class="form-control"  name="search" th:placeholder=" ${search}==null ? '質問' : ${search} ">
                     </div>
                     <button type="submit" class="btn btn-default">検索</button>
                 </form>
