--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,12 +34,12 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${questionList.showFirstPage}">
-                        <a th:href="@{/(pageNo=1,search=${search})}" aria-label="Previous">
+                        <a th:href="@{/(pageNo=1,search=${search},tag=${tag})}" aria-label="Previous">
                             <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
                     <li th:if="${questionList.showPrevious}">
-                        <a th:href="@{/(pageNo=${questionList.pageNo - 1},search=${search})}"
+                        <a th:href="@{/(pageNo=${questionList.pageNo - 1},search=${search},tag=${tag})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                         </a>
@@ -47,17 +47,17 @@
 
                     <li th:each="pageNo : ${questionList.pages}"
                         th:class="${questionList.pageNo == pageNo}? 'active' : ''">
-                        <a th:href="@{/(pageNo=${pageNo},search=${search})}" th:text="${pageNo}"></a>
+                        <a th:href="@{/(pageNo=${pageNo},search=${search},tag=${tag})}" th:text="${pageNo}"></a>
                     </li>
 
                     <li th:if="${questionList.showNext}">
-                        <a th:href="@{/(pageNo=${questionList.pageNo +1},search=${search})}"
+                        <a th:href="@{/(pageNo=${questionList.pageNo +1},search=${search},tag=${tag})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
                     <li th:if="${questionList.showEndPage}">
-                        <a th:href="@{/(pageNo=${questionList.totalPage},search=${search})}"
+                        <a th:href="@{/(pageNo=${questionList.totalPage},search=${search},tag=${tag})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&gt;&gt;</span>
                         </a>
@@ -66,7 +66,12 @@
             </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
-            <h4>热门标签</h4>
+            <h4>人気ランキング</h4>
+            <ul class="question-related">
+                <li th:each="tag:${tags}">
+                    <a th:href="@{/(pageNo=1,search=${search},tag=${tag})}" th:text="${tag}"></a>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
