--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <form class="navbar-form navbar-left" action="/" method="get">
                     <div class="form-group">
-                        <input type="text" class="form-control"  name="search" th:placeholder=" ${search}==null ? '質問' : ${search} ">
+                        <input type="text" class="form-control"  name="search" th:placeholder=" ${tag}==null and ${search}==null  ? '質問' : ${tag}+''+ ${search} ">
                     </div>
                     <button type="submit" class="btn btn-default">検索</button>
                 </form>
