--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,12 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>syzフォーラム</title>
-    <script src="/js/jquery-1.8.3.js"></script>
-    <script src="/js/jquery-3.5.1.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/css/community.css">
+    <head th:insert="~{import :: head}"></head>
 </head>
 <body>
 <div th:insert="navigation :: nav"></div>
