--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <form class="navbar-form navbar-left" action="/" method="get">
                     <div class="form-group">
-                        <input type="text" class="form-control"  name="search" th:placeholder=" ${tag}==null and ${search}==null  ? '質問' : ${tag}+''+ ${search} ">
+                        <input type="text" class="form-control"  name="search" th:placeholder=" (${tag}==null and ${search}==null) or (${tag}=='' and ${search}=='')  ? '質問' : ${tag}+''+ ${search} ">
                     </div>
                     <button type="submit" class="btn btn-default">検索</button>
                 </form>
@@ -38,8 +38,12 @@
                         </ul>
                     </li>
                     <li th:if="${session.user==null}">
-                        <a href="https://github.com/login/oauth/authorize?client_id=115285b7216b4c2397a1&redirect_uri=http://localhost:8080/callback&scope=user&state=1">ログイン</a>
+                        <a th:href="@{https://github.com/login/oauth/authorize(client_id='115285b7216b4c2397a1',redirect_uri=${#httpServletRequest.getServletContext().getAttribute('redirectUri')},scope='user',state=1)}" >ログイン</a>
                     </li>
+
+                </ul>
+
+                </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
