--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -4,16 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="${question.title}"></title>
-    <script src="/js/jquery-1.8.3.js"></script>
-    <script src="/js/jquery-3.5.1.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/community.js"></script>
-    <script src="/js/moment.js"></script>
-    <script src="/summernote/summernote.min.js"></script>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/css/community.css">
-    <link rel="stylesheet" href="/summernote/summernote.min.css">
+    <head th:insert="~{import :: head}"></head>
+    <head th:insert="~{import :: summernote}"></head>
 </head>
 <body>
 <div id="navigation" th:insert="navigation :: nav"></div>
