--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,22 @@
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 ">
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 発見</h2>
-            <hr>
+
+            <ul class="nav nav-tabs">
+                <li role="presentation" th:class="${sort == 'new' || sort == '' ? 'active':''}">
+                    <a th:href="@{/(sort='new')}">最新</a>
+                </li>
+                <li role="presentation" th:class="${sort == 'hot30' ? 'active':''}">
+                    <a th:href="@{/(sort='hot30')}">30天間最ホット</a>
+                </li>
+                <li role="presentation" th:class="${sort == 'hot7' ? 'active':''}">
+                    <a th:href="@{/(sort='hot7')}">7天間最ホット</a>
+                </li>
+                <li role="presentation" th:class="${sort == 'hot' ? 'active':''}">
+                    <a th:href="@{/(sort='hot')}">最ホット</a>
+                </li>
+            </ul>
+
             <div class="media" th:each="question:${questionList.data}">
                 <div class="media-left">
                     <a href="#">
@@ -29,12 +44,12 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${questionList.showFirstPage}">
-                        <a th:href="@{/(pageNo=1,search=${search},tag=${tag})}" aria-label="Previous">
+                        <a th:href="@{/(pageNo=1,search=${search},tag=${tag},sort=${sort})}" aria-label="Previous">
                             <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
                     <li th:if="${questionList.showPrevious}">
-                        <a th:href="@{/(pageNo=${questionList.pageNo - 1},search=${search},tag=${tag})}"
+                        <a th:href="@{/(pageNo=${questionList.pageNo - 1},search=${search},tag=${tag},sort=${sort})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                         </a>
@@ -42,17 +57,17 @@
 
                     <li th:each="pageNo : ${questionList.pages}"
                         th:class="${questionList.pageNo == pageNo}? 'active' : ''">
-                        <a th:href="@{/(pageNo=${pageNo},search=${search},tag=${tag})}" th:text="${pageNo}"></a>
+                        <a th:href="@{/(pageNo=${pageNo},search=${search},tag=${tag},sort=${sort})}" th:text="${pageNo}"></a>
                     </li>
 
                     <li th:if="${questionList.showNext}">
-                        <a th:href="@{/(pageNo=${questionList.pageNo +1},search=${search},tag=${tag})}"
+                        <a th:href="@{/(pageNo=${questionList.pageNo +1},search=${search},tag=${tag},sort=${sort})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
                     <li th:if="${questionList.showEndPage}">
-                        <a th:href="@{/(pageNo=${questionList.totalPage},search=${search},tag=${tag})}"
+                        <a th:href="@{/(pageNo=${questionList.totalPage},search=${search},tag=${tag},sort=${sort})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&gt;&gt;</span>
                         </a>
@@ -64,7 +79,7 @@
             <h4>人気ランキング</h4>
             <ul class="question-related">
                 <li th:each="tag:${tags}">
-                    <a th:href="@{/(pageNo=1,search=${search},tag=${tag})}" th:text="${tag}"></a>
+                    <a th:href="@{/(pageNo=1,search=${search},tag=${tag},sort=${sort})}" th:text="${tag}"></a>
                 </li>
             </ul>
         </div>
