--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -16,9 +16,11 @@
             <!--質問内容-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h3 class="question-title"><span th:text="${question.title}"></span></h3>
-                <span class="text-desc">提出者：[[${question.user.name}]] | 発表時間：[[${#dates.format(question.gmtCreate,'yyyy-MM-dd')}]] | [[${question.viewCount}]] 回ブラウズ</span>
+                <span class="text-desc"><span class="glyphicon glyphicon-user">[[${question.user.name}]]</span> | <span
+                        class="glyphicon glyphicon-time">[[${#dates.format(question.gmtCreate,'yyyy-MM-dd')}]]</span> | <span
+                        class="glyphicon glyphicon-eye-open">[[${question.viewCount}]]</span> </span>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" >
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <textarea id="summernote" th:text="${question.description}"></textarea>
                     <script>
                         $(document).ready(function () {
@@ -58,7 +60,13 @@
                             </h6>
                             <div th:text="${comment.content}"></div>
                             <div class="menu">
-                                <span class="glyphicon glyphicon-thumbs-up icon"></span>
+                                <span th:id="${'thumb-'+comment.id}" th:data-id="${comment.id+'/'+session.user.id}"
+                                      onclick="thumbComments(this)" class="thumbComment-icon"
+                                      th:if="${session.user!=null}">
+                                      <span class="glyphicon glyphicon-thumbs-up icon" th:id="${'thumbBtn-'+comment.id}" th:thumbBtn-id="${comment.id}"></span>
+                                      <span id="thumbChildElement">[[${comment.likeCount}]]</span>
+                                </span>
+
                                 <span class="glyphicon glyphicon-comment icon" th:id="${'commentBtn-'+comment.id}"
                                       th:data-id="${comment.id}" onclick="collapseComments(this)">[[${comment.commentCount}]]</span>
                                 <span class="text-desc pull-right">[[${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}]]</span>
